force-app/main/default/objects/Account/Account.object-meta.xml
<CustomObject>
    <description>Standard Account object with custom fields for Pappers</description>
    <label>Account</label>
    <pluralLabel>Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>