force-app/main/default/objects/Account/fields/Activite__c.field-meta.xml
<CustomField>
    <fullName>Activite__c</fullName>
    <description>Intitulé code NAF + Activité déclarée.</description>
    <inlineHelpText>Intitulé code NAF + Activité déclarée. Utilisez le bouton &quot;Enrichir avec Pappers 🚀&quot; pour remplir ce champ automatiquement.</inlineHelpText>
    <label>Activité</label>
    <length>255</length>
    <type>Text</type>
</CustomField>