force-app/main/default/objects/Account/fields/Code_NAF__c.field-meta.xml
<CustomField>
    <fullName>Code_NAF__c</fullName>
    <inlineHelpText>Utilisez le bouton &quot;Enrichir avec Pappers 🚀&quot; pour remplir ce champ automatiquement.</inlineHelpText>
    <label>Code NAF</label>
    <length>10</length>
    <type>Text</type>
</CustomField>