force-app/main/default/objects/Account/fields/FormeJuridique__c.field-meta.xml
<CustomField>
    <fullName>FormeJuridique__c</fullName>
    <inlineHelpText>Utilisez le bouton &quot;Enrichir avec Pappers 🚀&quot; pour remplir ce champ automatiquement.</inlineHelpText>
    <label>Forme Juridique</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Association déclarée</fullName>
            </value>
            <value>
                <fullName>Autre SA coopérative à conseil d’administration</fullName>
            </value>
            <value>
                <fullName>Autre société civile</fullName>
            </value>
            <value>
                <fullName>EURL, entreprise unipersonnelle à responsabilité limitée</fullName>
            </value>
            <value>
                <fullName>Entrepreneur individuel</fullName>
            </value>
            <value>
                <fullName>SA à conseil d’administration (s.a.i.)</fullName>
            </value>
            <value>
                <fullName>SARL, société à responsabilité limitée</fullName>
            </value>
            <value>
                <fullName>SAS, société par actions simplifiée</fullName>
            </value>
            <value>
                <fullName>SASU, société par actions simplifiée unipersonnelle</fullName>
            </value>
            <value>
                <fullName>SCI, société civile immobilière</fullName>
            </value>
            <value>
                <fullName>Société civile d’exploitation agricole</fullName>
            </value>
            <value>
                <fullName>Société en nom collectif</fullName>
            </value>
            <value>
                <fullName>Société étrangère non immatriculée au RCS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>