force-app/main/default/objects/Account/fields/SIREN__c.field-meta.xml
<CustomField>
    <fullName>SIREN__c</fullName>
    <description>Siren XXX XXX XXX</description>
    <inlineHelpText>Utilisez le bouton &quot;Enrichir avec Pappers 🚀&quot; pour remplir ce champ automatiquement.</inlineHelpText>
    <label>SIREN</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>